@@ -1,9 +1,8 @@
 /* config.h.  Generated by configure.  */
 /* config.h.in.  Generated from configure.ac by autoheader.  */
-/* $Id: config.h,v 1.27 2005/03/29 22:10:41 manu Exp $ */
 
 /* Build environnement */
-#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Tue Mar 29 23:06:31 CEST 2005"
+#define BUILD_ENV "manu@plan:/usr/home/manu/milter-greylist Sun May  8 01:20:23 CEST 2005"
 
 /* Define to 1 if you have the <arpa/inet.h> header file. */
 #define HAVE_ARPA_INET_H 1
