@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.23 2005/03/19 07:39:21 manu Exp $
+.\" $Id: greylist.conf.5,v 1.24 2005/05/07 23:24:28 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -28,7 +28,6 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-
 .Dd Mar 31, 2004
 .Dt greylist.conf 5
 .Os
