@@ -1,5 +1,5 @@
 .\"
-.\" $Id: milter-greylist.8,v 1.33 2005/03/18 06:07:55 manu Exp $
+.\" $Id: milter-greylist.8,v 1.34 2005/05/07 23:24:28 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -28,7 +28,6 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-
 .Dd Feb 21, 2004
 .Dt milter-greylist 8
 .Os
